--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates cupiditate exercitationem illo dolore fugit, saepe accusantium tempore animi 
             natus, nulla recusandae? Aspernatur aliquam natus voluptatibus blanditiis, consequatur 
             expedita velit quasi!</p>
-    <h2>ola mundo</h2>
+    <h2>ola mundol</h2>
 </body>
 </html>
